fix: 댓글 작성 코드 수정
